--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "webvr-ui": "latest"
   },
   "devDependencies": {
+    "babel-core": "6.5.2",
+    "babel-loader": "6.2.4",
+    "babel-preset-es2015": "6.5.0",
+    "babel-preset-stage-0": "6.5.0",
+    "babel-register": "6.6.5",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "0.23.1",
     "extract-text-webpack-plugin": "1.0.1",
